@@ -210,6 +210,17 @@ OPTION(BUILD_CODEC "Build the CODEC executables" ON)
 OPTION(BUILD_MJ2 "Build the MJ2 executables." OFF)
 OPTION(BUILD_JPIP "Build the JPIP library and executables." OFF)
 
+IF(BUILD_JPIP)
+ FIND_PACKAGE(CURL)
+ENDIF (BUILD_JPIP)
+
+IF(NOT CURL_FOUND)
+ IF(BUILD_JPIP)
+  message(WARNING "You must have libcurl installed to use JPIP")
+ ENDIF (BUILD_JPIP)
+ SET(BUILD_JPIP OFF)
+ENDIF (NOT CURL_FOUND)
+
 IF(BUILD_CODEC OR BUILD_MJ2 OR BUILD_JPIP)
   OPTION(BUILD_THIRDPARTY "Build the thirdparty executables if it is needed" OFF)
   ADD_SUBDIRECTORY(thirdparty)
